# lazyML

./: CMakeLists.txt  LICENSE  README.md  mnist.cpp  readme.md
AutomaticDffferentiation/: README.md  autograd.cpp  autograd.h  build.sh  ops.hpp  pointnet.py  sample.cpp  test.py
AutomaticDffferentiation/resources/: backprop_diagram
AutomaticDffferentiation/tests/: test_needle.cpp
ManualNeuralNetworks/: README.md  render.hpp
